--- a/signin.html
+++ b/signin.html
@@ -69,7 +69,11 @@
                             </a>
 
                         </div>
-                        <div class="form__group--2">
+                        <div class="align__right">
+                            <a href="#" class="text__decoration-none text__primary text__primary--3">Forgot
+                                Password?</a>
+                        </div>
+                        <div class="form__group--2 margin__bottom--none">
                             <label class="control control--checkbox text__primary">Remember Me ?
                                 <input type="checkbox" />
                                 <div class="control__indicator"></div>
