--- a/signup.html
+++ b/signup.html
@@ -394,6 +394,13 @@
                                     I agree to all <a id="openTermsBtn" class="checkbox__link">terms of service</a>
                                 </span>
                             </div>
+                            <div class="form__group--2">
+                                <input type="checkbox" name="agreetoprivacy" id="agreetoprivacy"
+                                    class="form__input-checkbox">
+                                <span class="checkbox__text text__primary">
+                                    I have read the <a id="openPrivacyBtn" class="checkbox__link">privacy policy</a>
+                                </span>
+                            </div>
                         </div>
 
                         <div class="tab__buttons">
@@ -500,6 +507,99 @@
 
             </div>
         </div>
+        <div class="body__signin-blackout" id="privacyModal">
+            <div class="modal">
+                <div class="card__terms container">
+                    <div class="card__header">
+                        <div class="card__logo">
+                            <img src="./assets/img/footer_logo.png" alt="">
+                        </div>
+                        <div class="card__title">
+                            <h3 class="heading__secondary heading__secondary--2">Privacy Policy</h3>
+                        </div>
+                    </div>
+                    <div class="card__body">
+                        <p class="text__primary--1">
+                            <span class="text__primary--dark">
+                                If you live in the United States
+                            </span>
+                            , Foreigneers User Agreement companies there <a href="#" class="link__primary">Terms of
+                                Service</a>
+                            , our <a href="#" class="link__primary">Privacy Policy</a>, and all incorporated policies.
+
+                        </p>
+                        <p class="text__primary--1">
+
+                            <span class="text__primary--dark">
+                                If you live in European Union or otherwise outside the United States
+                            </span>
+                            the foreigneers User Agreement comprises these <a href="#" class="link__primary">Terms of
+                                Service</a> , our <a href="#" class="link__primary">Privacy Policy</a>, and all
+                            incorporated
+                            policies.
+                        </p>
+
+                        <div class="card__heading">
+                            <h2 class="heading__secondary--3">Terms of Services</h2>
+                        </div>
+
+                        <div class="card__text">
+                            <p class="text__primary--1 bold margin__bottom--medium">
+                                If you live in the United States
+                            </p>
+                            <p class="text__primary--1">
+                                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                                laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                                architecto
+                                beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+                                aspernatur aut
+                                odit aut eque porro quisquam est, qui dolorem ipsum quia dolor situr? Quis autem vel eum
+                                iure
+                                reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
+                                qui
+                                dolorem eum fugiat quo voluptas nulla pariatur?"
+                            </p>
+                            <div class="margin__large">
+                                <h2 class="heading__secondary--4">1. Who May Use the Services</h2>
+
+                            </div>
+                            <p class="text text__primary--1 ">
+                                x ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
+                                velit esse
+                                quam nihil molestiae consequatur, vel illum quidolorem eum fugiat
+                                quo voluptas nulla pariatur?
+                            </p>
+                        </div>
+                        <div class="near__invisible-container container">
+                            <div class="near__invisible-bg"></div>
+                        </div>
+
+                    </div>
+                    <div class="card__footer">
+                        <hr class="hr">
+                        <div class="flex">
+                            <a class="card__download" href="#">
+
+                                <img src="./assets/img/document.png" alt="">
+
+                                Download
+
+                            </a>
+                            <div class="card__buttons">
+
+                                <a class="btn uppercase btn__form" id="closePrivacyBtn">
+                                    Close
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
     </div>
     <script src="./js/app.js"></script>
     <script src="./js/signup.js"></script>
