Moves remember me checkbox

--- a/signin.html
+++ b/signin.html
@@ -69,17 +69,22 @@
                             </a>
 
                         </div>
-                        <div class="align__right">
-                            <a href="#" class="text__decoration-none text__primary text__primary--3">Forgot
-                                Password?</a>
-                        </div>
+                        <div class="flex form__group-remember">
 
+                            <div class="form__group--2 margin__bottom--none">
+                                <label class="control control--checkbox text__primary">Remember Me?
+                                    <input type="checkbox" />
+                                    <div class="control__indicator"></div>
+                                </label>
 
-                        <div class="form__group--2 margin__bottom--none">
-                            <label class="control control--checkbox text__primary">Remember Me ?
-                                <input type="checkbox" />
-                                <div class="control__indicator"></div>
-                            </label>
+                            </div>
+                            <div class="">
+                                <a href="#" class="text__decoration-none ">
+                                    <p class="text__primary text__primary--3">Forgot
+                                        Password?</p>
+                                </a>
+                            </div>
+
 
                         </div>
                         <div class="form__button u_center_text">
