Moves remember me checkbox

--- a/signup.html
+++ b/signup.html
@@ -387,7 +387,7 @@
                             </div>
                         </div>
                         <div class="tab">
-                            <div class="form__group--2">
+                            <div class="form__group--2 margin__bottom--medium">
                                 <input type="checkbox" name="agreetoterms" id="agreetoterms"
                                     class="form__input-checkbox">
                                 <span class="checkbox__text text__primary">
