Adds FAQ page accordions

--- a/FAQ.html
+++ b/FAQ.html
@@ -32,8 +32,237 @@
 
 </head>
 
-<body>
+<body class="body__bg-white">
+    <header class="header faq__header">
+        <div class="header__container container">
+            <div class="header__logo">
+                <a href="/">
+                    <picture>
+                        <source srcset="./assets/img/Logo.webp" type="image/webp">
+                        <source srcset="./assets/img/Logo.png" type="image/jpeg">
+                        <img src=" ./assets/img/Logo.png" alt="Foreigneers Logo">
+                    </picture>
+                </a>
+            </div>
 
+            <ul class="menu__list">
+                <li class="menu__item">
+                    <a href="#about" class="menu__link">About Us</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#features" class="menu__link">Features</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#platforms" class="menu__link">Platforms</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#progress" class="menu__link">Progress</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#demo" class="menu__link">Demo</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#donate" class="menu__link">Donate</a>
+                </li>
+            </ul>
+
+            <div class="header__btn">
+                <a href="/signin.html" class="btn btn__primary">Login</a>
+            </div>
+
+            <div class="mobile__menu-btn">
+                <div class="btn__line"></div>
+            </div>
+
+            <div class="mobile__menu-bg">
+                &nbsp;
+            </div>
+
+
+        </div>
+    </header>
+    <ul class="mobile__menu-list">
+        <li class="mobile__menu-item">
+            <a href="#about" class="mobile__menu-link">About Us</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="#features" class="mobile__menu-link">Features</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="#platforms" class="mobile__menu-link">Platforms</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="#progress" class="mobile__menu-link">Progress</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="#demo" class="mobile__menu-link">Demo</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="#donate" class="mobile__menu-link">Donate</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="./signin.html" class="mobile__menu-link">Login</a>
+        </li>
+    </ul>
+    <main class="faq__main ">
+        <div class="faq__urls">
+            <div class="faq__urls-container">
+                <div class="faq__urls-heading">
+                    <h3 class="heading__tertiary">FAQs</h3>
+                </div>
+                <ul class="faq__urls-list">
+                    <li class="faq__urls-item">
+                        <a href="" class="faq__urls-link text__decoration-none text__primary">Shipping & Returns</a>
+                    </li>
+                    <li class="faq__urls-item">
+                        <a href="" class="faq__urls-link text__decoration-none text__primary">Products</a>
+                    </li>
+                    <li class="faq__urls-item">
+                        <a href="" class="faq__urls-link text__decoration-none text__primary">Discount</a>
+                    </li>
+                    <li class="faq__urls-item">
+                        <a href="" class="faq__urls-link text__decoration-none text__primary">Afterpay</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+        <div class="faq__accordions">
+            <div class="faq__accordions-container">
+                <div class="faq__accordions-heading">
+                    <h3 class="heading__secondary">Shipping & Returns</h3>
+                </div>
+
+                <div class="faq__accordions-list">
+                    <div class="accordion">
+                        <div class="accordion__button text__primary text__primary--3 bold">
+
+                            Where do you shop?
+
+                        </div>
+                        <div class="panel">
+                            <p class="text__primary text__primary--3">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam exercitationem aliquid
+                                sequi nulla rem totam quam, non suscipit? Pariatur, enim? Rerum quaerat ad, ut assumenda
+                                cupiditate officiis cum nulla possimus.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion__button text__primary--3 text__primary bold">
+
+                            How much does shipping cost?
+
+                        </div>
+
+
+                        <div class="panel">
+                            <p class="text__primary text__primary--3">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam exercitationem aliquid
+                                sequi nulla rem totam quam, non suscipit? Pariatur, enim? Rerum quaerat ad, ut assumenda
+                                cupiditate officiis cum nulla possimus.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <div class="accordion__button text__primary--3 text__primary bold">
+
+                            What happens after signup?
+
+
+                        </div>
+
+
+                        <div class="panel">
+                            <p class="text__primary text__primary--3">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam exercitationem aliquid
+                                sequi nulla rem totam quam, non suscipit? Pariatur, enim? Rerum quaerat ad, ut assumenda
+                                cupiditate officiis cum nulla possimus.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
+    <footer class="footer faq__footer">
+        <div class="container">
+            <div class="footer__top u_center_text">
+                <div class="footer__logo">
+                    <picture>
+                        <source srcset="./assets/img/footer_logo.webp" type="image/webp">
+                        <source srcset="./assets/img/footer_logo.png" type="image/png">
+                        <img src="./assets/img/footer_logo.png" alt="">
+                    </picture>
+                </div>
+            </div>
+            <div class="footer__center">
+                <ul class="footer__links">
+                    <li class="footer__item">
+                        <a href="./get-in-contact.html" class="footer__link">Get in contact</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="./privacy.html" class="footer__link">Privacy</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="./hiring.html" class="footer__link">Hiring</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="./terms-of-service.html" class="footer__link">Terms of Service</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Acceptable use policy</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="./FAQ.html" class="footer__link">FAQ</a>
+                    </li>
+
+                </ul>
+                <ul class="footer__social">
+                    <li class="footer__social-item">
+                        <a href="" class="footer__social-link">
+                            <picture>
+                                <source srcset="./assets/img/facebook.webp" type="image/webp">
+                                <source srcset="./assets/img/facebook.png" type="image/png">
+                                <img src="./assets/img/facebook.png" alt="">
+                            </picture>
+                        </a></li>
+                    <li class="footer__social-item">
+                        <a href="" class="footer__social-link">
+                            <picture>
+                                <source srcset="./assets/img/youtube.webp" type="image/webp">
+                                <source srcset="./assets/img/youtube.png" type="image/png">
+                                <img src="./assets/img/youtube.png" alt="">
+                            </picture>
+                        </a></li>
+                    <li class="footer__social-item">
+                        <a href="" class="footer__social-link">
+                            <picture>
+                                <source srcset="./assets/img/twitter.webp" type="image/webp">
+                                <source srcset="./assets/img/twitter.png" type="image/png">
+                                <img src="./assets/img/twitter.png" alt="">
+                            </picture>
+                        </a></li>
+                </ul>
+            </div>
+            <div class="footer__bottom">
+                <div class="u_center_text">
+                    <div class="footer__copyright">
+                        <p class="text__copyright">
+                            Copyright &copy; 2020
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 </body>
+
+<script src="./js/app.js"></script>
+<script src="./js/FAQ.js"></script>
 
 </html>
