--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                         <a href="#" class="footer__link">Acceptable use policy</a>
                     </li>
                     <li class="footer__item">
-                        <a href="#" class="footer__link">FAQ</a>
+                        <a href="./FAQ.html" class="footer__link">FAQ</a>
                     </li>
 
                 </ul>
