--- a/FAQ.html
+++ b/FAQ.html
@@ -104,7 +104,7 @@
             <a href="./signin.html" class="mobile__menu-link">Login</a>
         </li>
     </ul>
-    <main class="faq__main ">
+    <main class="faq__main container">
         <div class="faq__urls">
             <div class="faq__urls-container">
                 <div class="faq__urls-heading">
@@ -151,7 +151,7 @@
                     <div class="accordion">
                         <div class="accordion__button text__primary--3 text__primary bold">
 
-                            How much does shipping cost?
+                            What are the shipping costs?
 
                         </div>
 
