Corrects faq mobile view

--- a/FAQ.html
+++ b/FAQ.html
@@ -127,6 +127,39 @@
 
             </div>
         </div>
+        <div class="faq__urls-mobile">
+            <div class="faq__urls-mobile-container" id="faqMobileContainer">
+                <div class="faq__mobile-heading">
+
+                    <h3 class="heading__tertiary u_center_text">Shipping & Returns</h3>
+                    <div class="faq__mobile-dropdown">
+                        <picture>
+                            <source srcset="./assets/img/down-arrow-menu.webp" type="image/webp">
+                            <source srcset="./assets/img/down-arrow-menu.png" type="image/png">
+                            <img src="./assets/img/down-arrow-menu.png" alt="">
+                        </picture>
+                    </div>
+                </div>
+                <div class="">
+                    <ul class="faq__urls-list" id="faqDropdownMenu">
+                        <li class="faq__urls-item">
+                            <a href="" class="faq__urls-link text__decoration-none text__primary">Shipping & Returns</a>
+                        </li>
+                        <li class="faq__urls-item">
+                            <a href="" class="faq__urls-link text__decoration-none text__primary">Products</a>
+                        </li>
+                        <li class="faq__urls-item">
+                            <a href="" class="faq__urls-link text__decoration-none text__primary">Discount</a>
+                        </li>
+                        <li class="faq__urls-item">
+                            <a href="" class="faq__urls-link text__decoration-none text__primary">Afterpay</a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
         <div class="faq__accordions">
             <div class="faq__accordions-container">
                 <div class="faq__accordions-heading">
