Corrects remember me and forgot password positioning on mobile

--- a/signin.html
+++ b/signin.html
@@ -72,7 +72,7 @@
                         <div class="flex form__group-remember">
 
                             <div class="form__group--2 margin__bottom--none">
-                                <label class="control control--checkbox text__primary">Remember Me?
+                                <label class="control control--checkbox text__primary text__primary--4">Remember Me?
                                     <input type="checkbox" />
                                     <div class="control__indicator"></div>
                                 </label>
@@ -80,7 +80,7 @@
                             </div>
                             <div class="">
                                 <a href="#" class="text__decoration-none ">
-                                    <p class="text__primary text__primary--3">Forgot
+                                    <p class="text__primary text__primary--3 text__primary--4">Forgot
                                         Password?</p>
                                 </a>
                             </div>
