Corrects password placeholder position

--- a/signin.html
+++ b/signin.html
@@ -59,11 +59,13 @@
                             <input type="text" name="" class="form__input" placeholder="Email">
                         </div>
                         <div class="form__group flex--1">
-                            <div class="form__label">
-                                <img src="./assets/img/password.png" alt="">
+                            <div class="flex--3">
+                                <div class="form__label">
+                                    <img src="./assets/img/password.png" alt="">
+                                </div>
+                                <input type="password" name="password" class="form__input" placeholder="Password"
+                                    id="password">
                             </div>
-                            <input type="password" name="password" class="form__input" placeholder="Password"
-                                id="password">
                             <a class="show__password">
                                 <img src="./assets/img/eye.png" alt="" class="show__password-img">
                             </a>
