--- a/signup.html
+++ b/signup.html
@@ -367,14 +367,16 @@
                         </div>
                         <div class="tab">
                             <div class="form__group form__group-sm">
-                                <div class="form__label">
-                                    <img src="./assets/img/password.png" alt="">
+                                <div class="flex--3">
+                                    <div class="form__label">
+                                        <img src="./assets/img/password.png" alt="">
+                                    </div>
+                                    <input type="password" name="password" class="form__input" placeholder="Password"
+                                        id="password">
                                 </div>
-                                <input type="password" name="password" class="form__input" placeholder="Password"
-                                    id="password">
-                                <a class="show__password">
-                                    <img src="./assets/img/eye.png" alt="" class="show__password-img">
-                                </a>
+                                <a class="show__password"> <img src="./assets/img/eye.png" alt=""
+                                        class="show__password-img"> </a>
+
                             </div>
 
                             <span class="text__primary text__password-strength">Password Strength</span>
