Deals with spacing issues

--- a/FAQ.html
+++ b/FAQ.html
@@ -104,8 +104,8 @@
             <a href="./signin.html" class="mobile__menu-link">Login</a>
         </li>
     </ul>
-    <main class="faq__main container">
-        <div class="faq__urls">
+    <main class="faq__main container ">
+        <div class="faq__urls margin__bottom--medium">
             <div class="faq__urls-container">
                 <div class="faq__urls-heading">
                     <h3 class="heading__tertiary">FAQs</h3>
