--- a/signin.html
+++ b/signin.html
@@ -89,7 +89,7 @@
 
 
                         </div>
-                        <div class="form__button u_center_text">
+                        <div class="form__button u_center_text margin__medium">
                             <button type="submit" class="btn btn__form uppercase">Sign in</button>
                         </div>
 
