--- a/hiring-operations-manager.html
+++ b/hiring-operations-manager.html
@@ -68,7 +68,7 @@
             </ul>
 
             <div class="header__btn">
-                <a href="/signin.html" class="btn btn__primary">Login</a>
+                <a href="signin.html" class="btn btn__primary">Login</a>
             </div>
 
             <div class="mobile__menu-btn">
@@ -212,7 +212,8 @@
                                 <source srcset="./assets/img/facebook.png" type="image/png">
                                 <img src="./assets/img/facebook.png" alt="">
                             </picture>
-                        </a></li>
+                        </a>
+                    </li>
                     <li class="footer__social-item">
                         <a href="" class="footer__social-link">
                             <picture>
@@ -220,7 +221,8 @@
                                 <source srcset="./assets/img/youtube.png" type="image/png">
                                 <img src="./assets/img/youtube.png" alt="">
                             </picture>
-                        </a></li>
+                        </a>
+                    </li>
                     <li class="footer__social-item">
                         <a href="" class="footer__social-link">
                             <picture>
@@ -228,7 +230,8 @@
                                 <source srcset="./assets/img/twitter.png" type="image/png">
                                 <img src="./assets/img/twitter.png" alt="">
                             </picture>
-                        </a></li>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="footer__bottom">
