--- a/hiring.html
+++ b/hiring.html
@@ -36,7 +36,7 @@
     <header class="header">
         <div class="header__container container">
             <div class="header__logo">
-                <a href="/">
+                <a href="./index.html">
                     <picture>
                         <source srcset="./assets/img/Logo.webp" type="image/webp">
                         <source srcset="./assets/img/Logo.png" type="image/jpeg">
@@ -67,7 +67,7 @@
             </ul>
 
             <div class="header__btn">
-                <a href="/signin.html" class="btn btn__primary">Login</a>
+                <a href="./signin.html" class="btn btn__primary">Login</a>
             </div>
 
             <div class="mobile__menu-btn">
@@ -251,7 +251,8 @@
                                 <source srcset="./assets/img/facebook.png" type="image/png">
                                 <img src="./assets/img/facebook.png" alt="">
                             </picture>
-                        </a></li>
+                        </a>
+                    </li>
                     <li class="footer__social-item">
                         <a href="" class="footer__social-link">
                             <picture>
@@ -259,7 +260,8 @@
                                 <source srcset="./assets/img/youtube.png" type="image/png">
                                 <img src="./assets/img/youtube.png" alt="">
                             </picture>
-                        </a></li>
+                        </a>
+                    </li>
                     <li class="footer__social-item">
                         <a href="" class="footer__social-link">
                             <picture>
@@ -267,7 +269,8 @@
                                 <source srcset="./assets/img/twitter.png" type="image/png">
                                 <img src="./assets/img/twitter.png" alt="">
                             </picture>
-                        </a></li>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="footer__bottom">
