--- a/signin.html
+++ b/signin.html
@@ -28,7 +28,7 @@
     <meta name=”twitter:title” content="Landing page | Foreigneers" />
     <meta name=”twitter:description” content="blank" />
     <meta name=”twitter:image” content="./assets/config/android-chrome-512x512.png" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="header__container">
                 <div class="header__logo">
-                    <a href="/">
+                    <a href="./index.html">
                         <img src="./assets/img/Logo.png" alt="">
                     </a>
                 </div>
@@ -48,10 +48,6 @@
                         <div class="heading__tertiary">Sign in to Foreigneers</div>
                     </div>
                     <form>
-                        <div class="form__validation error">
-                            <div class="text__validation">Incorrect Username</div>
-                        </div>
-
                         <div class="form__group">
                             <div class="form__label">
                                 <img src="./assets/img/email.png" alt="">
@@ -108,7 +104,7 @@
                         </p>
                     </div>
                     <div class="card__btn">
-                        <a href="/signup.html" class="btn btn__tertiary uppercase">Sign Up</a>
+                        <a href="./signup.html" class="btn btn__tertiary uppercase">Sign Up</a>
                     </div>
                 </div>
             </div>
