--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="header__container">
                 <div class="header__logo">
-                    <a href="/">
+                    <a href="./index.html">
                         <img src="./assets/img/Logo.png" alt="">
                     </a>
                 </div>
@@ -53,7 +53,7 @@
                         </p>
                     </div>
                     <div class="card__btn">
-                        <a href="/signin.html" class="btn btn__tertiary uppercase">Sign in</a>
+                        <a href="./signin.html" class="btn btn__tertiary uppercase">Sign in</a>
                     </div>
                 </div>
                 <div class="card__form">
