🐛 (fix): Corrects terms of service links

--- a/termsofservice.html
+++ b/termsofservice.html
@@ -35,7 +35,7 @@
     <main class="container">
         <div class="header__container">
             <div class="header__logo">
-                <a href="/">
+                <a href="./index.html">
                     <img src="./assets/img/Logo.png" alt="">
                 </a>
             </div>
